2-Orchestration/clusters/infrastructure/nextcloud/network-policies/allow-scraping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-scraping
  namespace: nextcloud
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: monitoring
        podSelector:
          matchLabels:
            app: prometheus
      ports:
      - port: 8080
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  policyTypes:
    - Ingress
